# NYU-Deep-Learning

./: .gitignore  README.md
Jepa-final_project/Deep-Learning-CSCI-GA-2572-Final-Project/: .gitignore  README.md  configs.py  dataset.py  engine.py  evaluator.py  loss.py  main.py  metrics.txt  model_weights.pth  models.py  optimized_dataset.py  optimizer.py  pyproject.toml  requirements.txt  team_name.txt  train.py  utils.py
Jepa-final_project/Deep-Learning-CSCI-GA-2572-Final-Project/config/: 2model_jepa_config.yaml  adv_jepa_config.yaml  areg_adv_jepa_config.yaml  areg_adv_jepa_config_higher_delta.yaml  areg_adv_jepa_config_lower_delta.yaml  areg_jepa_2d_config.yaml  areg_jepa_2d_config_adamw.yaml  areg_jepa_2d_config_adamw_linear.yaml  areg_jepa_2d_config_covariance_0.yaml  areg_jepa_2d_config_higher_embed_dim.yaml  areg_jepa_2d_config_lower_embed_dim.yaml  areg_jepa_2d_config_lr_0_001.yaml  areg_jepa_2d_config_rmsprop.yaml  areg_jepa_2d_config_smaller_bs.yaml  areg_jepa_2d_config_v0.yaml  areg_jepa_2d_config_v1.yaml  areg_jepa_2d_config_v2.yaml  areg_jepa_2d_config_v3.yaml  areg_jepa_2d_v2.yaml  areg_jepa_2d_v2_config.yaml  areg_jepa_2d_vicreg_config.yaml  areg_jepa_config.yaml  areg_jepa_config_1_1_1_1.yaml  areg_jepa_config_1_1_1_25.yaml  areg_jepa_config_1_1_25_1.yaml  areg_jepa_config_1_1_25_25.yaml  areg_jepa_config_1_25_1_1.yaml  areg_jepa_config_1_25_1_25.yaml  areg_jepa_config_1_25_25_1.yaml  areg_jepa_config_1_25_25_25.yaml  areg_jepa_config_25_1_1_1.yaml  areg_jepa_config_25_1_1_25.yaml  areg_jepa_config_25_1_25_1.yaml  areg_jepa_config_25_1_25_25.yaml  (+8 more)
(+18 files in other folders)
