[tool.poetry]
name = "dl-final-proj"
version = "0.1.0"
description = ""
authors = ["Kevin Mathew T"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.5.1"
omegaconf = "^2.3.0"
matplotlib = "^3.9.2"
numpy = "2.0"
tqdm = "^4.67.1"
accelerate = "^1.1.1"
notebook = "^7.2.2"
wandb = "^0.18.7"
seaborn = "^0.13.2"
scipy = "1.13.0"
scikit-learn = "^1.5.2"
pathspec = "^0.12.1"
pynvml = "^12.0.0"
timm = "^1.0.12"
pandas = "^2.2.3"
poetry = "^1.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
